fix css for images on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4259,6 +4259,7 @@ cite {
   width: 960px;
   max-width: 90%;
   margin: 7rem auto 7rem;
+
 }
 
 .post {
@@ -4304,6 +4305,13 @@ cite {
 
 .post .entry_content {
   padding-bottom: 2rem;
+  vertical-align: middle;
+}
+
+.post .entry_content img{
+  width: 100%;
+  height: 80%;
+  vertical-align: middle;
 }
 
 .post_footer {
